SERVER-11484 mongos bubbles up "code" field for some command failures

Affects commands aggregate, collStats, count, mapReduce, and
moveChunk.  If a failure on one or more shards causes the command to
fail, mongos will add a "code" field to the response if the error was
common to all shards that failed.